syntax = "proto3";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string userId = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
}

message RegisterRequest {
  string userId = 1;
  string password = 2;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message User {
  string id = 1;
  string userId = 2;
} 